--- a/CSS/site.css
+++ b/CSS/site.css
@@ -1012,7 +1012,7 @@ footer .topBtn .backTopBtn {
   }
   #mainHomePage #desktopGrid #hmCon {
     grid-column: 3;
-    grid-template-columns: 1fr 2.5fr;
+    grid-template-columns: 1fr 2fr;
     grid-template-rows: 2fr 1fr 1fr 1fr;
     height: 30vh;
   }
@@ -1021,9 +1021,12 @@ footer .topBtn .backTopBtn {
   }
   #mainHomePage #desktopGrid #hmCon h1 {
     width: fit-content;
+    grid-column: 1 / 3;
+    justify-self: start;
   }
   #mainHomePage #desktopGrid #hmCon p {
     width: fit-content;
+    margin-left: 5vw;
     font-size: 1.5em;
     justify-self: end;
   }
@@ -1031,7 +1034,7 @@ footer .topBtn .backTopBtn {
     width: fit-content;
     font-size: 1.5em;
     position: relative;
-    left: 1vw;
+    left: 2vw;
   }
   #mainHomePage #desktopGrid #hmCon #socialContact {
     grid-area: 4 / 2;
